# foreign-whispers

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  NOTICE  README.md  docker-compose.yml  download_video.py  main.py  pyproject.toml  requirements.txt  transcribe.py  tts_es.py  video_registry.yml
.beads/: config.yaml  issues.jsonl
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl  labels.jsonl
api/src/: main.py
api/src/core/: config.py  (+2 more)
core/: config.py
docs/: aegean-ai-deliverables.md  aegean-ai-site-links.txt  aegean-ai-specs.md  dubbing-alignment-design.md  pydanticai-logfire-architecture.md
foreign_whispers/: __init__.py  agents.py  alignment.py  diarization.py  evaluation.py  reranking.py  voice_resolution.py
frontend/: package.json  pnpm-lock.yaml
notebooks/: foreign_whispers_pipeline.ipynb  tts_colab_dubbing.ipynb
notebooks/alignment_integration/: alignment_integration.ipynb
notebooks/colab_gpu_services/: gpu_services.ipynb
notebooks/diarization_integration/: diarization_integration.ipynb
notebooks/download_integration/: download_integration.ipynb
notebooks/pipeline_end_to_end/: pipeline_end_to_end.ipynb
notebooks/stitch_integration/: stitch_integration.ipynb
notebooks/transcription_integration/: transcription_integration.ipynb
notebooks/translation_integration/: translation_integration.ipynb
scripts/: verify_pipeline_output.py
tests/: conftest.py  test_agents.py  test_align_router.py  test_alignment.py  test_api_scaffold.py  test_assign_speakers.py  test_diarize_router.py  test_docker_compose.py  test_download_router.py  test_evaluation.py  test_fastapi_skeleton.py  test_inference.py  test_reranking.py  test_rubberband_fallback.py  test_services.py  test_stitch_router.py  test_storage_service.py  test_transcribe_router.py  test_translate_router.py  test_tts_alignment_wire.py  test_tts_baseline_flag.py  test_tts_es.py  test_tts_router.py  test_voice_resolution.py
(+36 files in other folders)
