[project]
name = "foreign-whispers"
version = "0.1.0"
description = "Foreign Whispers: YouTube video dubbing pipeline (download, transcribe, translate, TTS, video stitching)"
license = { text = "LicenseRef-AGPL-3.0-only-with-Commons-Clause" }
requires-python = ">=3.11,<3.12"
dependencies = [
    "yt-dlp>=2026.3.17",
    "youtube-transcript-api>=1.2.4",
    "moviepy<2",
    "argostranslate>=1.11.0",
    "fastapi>=0.135",
    "uvicorn[standard]>=0.42.0",
    "python-multipart>=0.0.22",
    "pydantic-settings>=2.13",
    "pyrubberband>=0.4.0",
    "librosa>=0.11.0",
    "soundfile>=0.13.1",
    "pydub>=0.25.1",
    "requests>=2.33.0",
    "setuptools<81",
    "pyyaml>=6.0.3",
    "logfire>=4.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
gpu = [
    "torch>=2.11",
    "torchaudio>=2.11",
    "TTS>=0.22.0",
    "openai-whisper",
    "streamlit>=1.55.0",
]
dev = [
    "pytest>=9.0",
    "httpx>=0.28",
    "nbconvert>=7.17.0",
    "jupyter>=1.1.1",
    "notebook>=7.5.6",
    "jupyter-client>=8.8.0",
]
alignment = [
    "logfire",
    "silero-vad",
    "pyannote.audio",
]

[tool.uv]
constraint-dependencies = [
    "onnxruntime<1.24",
    "numpy<2",
    "transformers<4.46",
]
find-links = [
    "https://download.pytorch.org/whl/cu128",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "requires_silero: needs silero-vad and torch installed",
    "requires_pyannote: needs pyannote.audio installed and FW_HF_TOKEN set",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["foreign_whispers"]
